Fixed kbd overflow

--- a/wcfsetup/install/files/style/bbcode/inlineCode.scss
+++ b/wcfsetup/install/files/style/bbcode/inlineCode.scss
@@ -7,6 +7,7 @@ kbd {
 	display: inline-block;
 	font-family: Consolas, 'Courier New', monospace;
 	margin: 0 2px;
+	overflow: auto;
 	padding: 0 4px;
 	word-break: break-all;
 	word-wrap: break-word;
